<resources>
    <string name="app_name">HRloginform</string>
    <string name="Register">Registration Form</string>
    <string name="Submit">Register</string>
    <string name="Submit1">Submit</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Adduser">Add User</string>
    <string name="ViewALL">View ALL</string>
    <string name="salary">Salary</string>
    <string name="age">Age</string>
    <string name="userslist">Users List</string>
    <string name="OfficeLocation">Office Location</string>
    <string name="Next">Next</string>
    <string name="title_activity_maps">Map</string>

</resources>
