<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingTop="2dp"
    android:gravity="center"
    >
<Button
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:text="@string/Adduser"
    android:id="@+id/adduser"
    tools:ignore="ButtonStyle" />
    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/ViewALL"
        android:id="@+id/ViewALL"
        tools:ignore="ButtonStyle" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/officelocation"
        android:text="@string/OfficeLocation" tools:ignore="ButtonStyle" />

</LinearLayout>