<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/employeetext"
                android:text="@string/Username"
                android:gravity="start"

                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/employeename"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing"
                />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/salarytext"
                android:gravity="start"
                android:text="@string/salary"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/salaryname"
                android:layout_marginStart="@dimen/spacing"
                />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/agetext"
                android:text="@string/age"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/agename"
                android:layout_marginStart="@dimen/spacing"
               />
            </LinearLayout>
            </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>